# ChangeLog for sci-chemistry/cns
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/cns/ChangeLog,v 1.9 2008/01/10 04:43:03 dberkholz Exp $

  03 Dec 2008; justin Lecher <justin@j-schmitz.net> ++, cns-1.2.1.ebuild:
  test

  19 Nov 2008; justin Lecher <justin@j-schmitz.net>
  +files/1.2.1-allow-gcc-openmp.patch, +files/cns_solve_env_sh,
  +cns-1.2.1.ebuild:
  version 1.2.1 added and src_test fixed

  10 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/1.2-allow-unknown-architectures.patch, cns-1.2-r1.ebuild:
  Add a patch to make CNS compile on unknown architecture/OS combinations, of
  which ppc is one.

*cns-1.2-r1 (07 Dec 2007)

  07 Dec 2007; Donnie Berkholz <dberkholz@gentoo.org>; +cns-1.2-r1.ebuild:
  Fix non-g77 build; make cns_web work; install the environment script to
  /etc/profile.d/ so people don't need to manually source it; also install the
  (hidden) bash/sh-compatible script; don't pass LDFLAGS because gfortran
  doesn't deal with them properly.

*cns-1.2 (22 Jun 2007)

  22 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>; cns-1.1.ebuild,
  +cns-1.2.ebuild:
  (#162740) Bump.

  15 Mar 2007; Danny van Dyk <kugelfang@gentoo.org> cns-1.1.ebuild:
  QA: Removed illegal use of ${ROOT}. Bug #168043

  20 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  (#148281) Change herd to sci-chemistry from sci.

  05 Aug 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Remove myself as maintainer, anyone feel free to work on this, although I'll
  continue to do so as well.

  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; cns-1.1.ebuild:
  x86/ppc stable.

  07 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>; metadata.xml:
  Update to my new email address.

*cns-1.1 (10 Jun 2006)

  10 Jun 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/1.1-time-length-10.patch, +metadata.xml, +cns-1.1.ebuild: