@@ -7,7 +7,6 @@ DIST cns_solve_1.21_all-mp.tar.gz 32758988 RMD160 cdcb19a4a5032891ae4ac17ca8ed4a
 DIST cns_solve_1.21_all.tar.gz 32739912 RMD160 ab763373923264497d1ccb507cab23b2e1af9826 SHA1 93059805e14f0482cf58755daecc52cf97863215 SHA256 a581c6a0e9e5ffd45f025520959921d7ba91bb5d1e6569f1c81e709bb6f87c81
 DIST cns_solve_1.2_all.tar.gz 30456531 RMD160 45cff57b3f026d730032cfc1c9476880f7cc81ab SHA1 1611ad499746993a9d210e6053e1cdd1553848a7 SHA256 230847d8e00def4b55dda8c50d9148bca11a88ed6bc575e735041c91f8fff064
 EBUILD cns-1.2-r2.ebuild 4678 RMD160 a3d8890d017fbdeb94a159a778d751790953f5a8 SHA1 4c83383536b28de93697df3c59c5dabc648df4e4 SHA256 b0042ed4cf32f9ea6db4bb1867c4465c322b29ff9272b03d358aaaaeb199701b
-EBUILD cns-1.2.1-r1.ebuild 5414 RMD160 d771987c4397235bb8b6097c338c2c11923c5520 SHA1 19690210069c3d4912f33157b55d9406bd4c98f7 SHA256 1da8cbc297cfa4c5b5bcb8fddf329e24d4920fa1b94fd5038e706afd020f2f75
-EBUILD cns-1.2.1.ebuild 5488 RMD160 c70e7d11037c9eb522c648d027f39506b160a6a1 SHA1 b93c0ce37279125e7a618971409958910bea8458 SHA256 2d4c823e6ee11ea23770139bdbbed51f9e1ccc1bcc9114fe42a4cecaf8969c54
-MISC ChangeLog 2046 RMD160 1405c27bd77e86e197bc55e788241221ed5a86a7 SHA1 2602e3fb0446de8df3e75249b657d73b54d8ebf1 SHA256 4817c57e1162135bbbb7018f800262d26c321b373b19fa71470def1c41d33978
+EBUILD cns-1.2.1-r1.ebuild 5489 RMD160 bfccd9acfa8fa1eeb80a485b22050d9870e1b9b4 SHA1 9230daf5e1b4e913c491492354c07b0cbdd41593 SHA256 e92292c4512d6aa8587105c176c99b8b5e52f88cfb8d719a5b6037a74441628b
+MISC ChangeLog 2145 RMD160 d9fa819e01e15c2df75703c4a181185c7f23ea5d SHA1 1a15e49697864804f43d61b2404e091bb3f739dc SHA256 8743cf0efbcd12fe226c03c53e1be25895b97f22c626d366a5e0a6379e6a7eb7
 MISC metadata.xml 236 RMD160 8daa73175984abbbdae63785d93e15383015b846 SHA1 bc71e3d2044b36ead9fe81f5d39974087784c0ca SHA256 841382253fcf525129f8acc3e193931a1e045608dbaa2d978df6a15104545f1d
